--- a/KRNL.Models/packages.config
+++ b/KRNL.Models/packages.config
@@ -4,9 +4,11 @@
   <package id="Microsoft.AspNet.Cors" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.2" targetFramework="net472" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.2" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.7" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.Owin" version="4.0.1" targetFramework="net472" />
   <package id="Microsoft.Owin.Cors" version="4.0.1" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net472" />
