--- a/KRNL.Data/KRNL.Data.csproj
+++ b/KRNL.Data/KRNL.Data.csproj
@@ -90,21 +90,9 @@
     <Compile Include="Cooperator.cs" />
     <Compile Include="Message.cs" />
     <Compile Include="IdentityModels.cs" />
-    <Compile Include="Migrations\202004280058056_one.cs" />
-    <Compile Include="Migrations\202004280058056_one.Designer.cs">
-      <DependentUpon>202004280058056_one.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202004280104075_two.cs" />
-    <Compile Include="Migrations\202004280104075_two.Designer.cs">
-      <DependentUpon>202004280104075_two.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202004280121091_three.cs" />
-    <Compile Include="Migrations\202004280121091_three.Designer.cs">
-      <DependentUpon>202004280121091_three.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202004280447047_four.cs" />
-    <Compile Include="Migrations\202004280447047_four.Designer.cs">
-      <DependentUpon>202004280447047_four.cs</DependentUpon>
+    <Compile Include="Migrations\202004290121563_five.cs" />
+    <Compile Include="Migrations\202004290121563_five.Designer.cs">
+      <DependentUpon>202004290121563_five.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -114,17 +102,8 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202004280058056_one.resx">
-      <DependentUpon>202004280058056_one.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202004280104075_two.resx">
-      <DependentUpon>202004280104075_two.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202004280121091_three.resx">
-      <DependentUpon>202004280121091_three.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202004280447047_four.resx">
-      <DependentUpon>202004280447047_four.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202004290121563_five.resx">
+      <DependentUpon>202004290121563_five.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
